<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".ui.activity.SignUpActivity">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/extraSpace"
        android:layout_marginTop="@dimen/extraSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/extraSpace"
        android:text="@string/forgot_your_password_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backIcon" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subConstrain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/extraLargeSpace"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extraSpace"
            android:layout_marginTop="@dimen/extraSpace"
            android:text="@string/let_s_get_something_text"
            android:textColor="@color/black"
            android:textSize="@dimen/extraLargeText"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/subConstrain"
            app:layout_constraintTop_toTopOf="@id/subConstrain" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extraSpace"
            android:text="@string/good_to_see_you_back_text"
            android:textSize="@dimen/mediumText"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/mediumImage"
            android:layout_height="@dimen/mediumImage"
            android:layout_marginStart="@dimen/extraSpace"
            android:layout_marginTop="@dimen/extraSpace"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/mediumImage"
            android:layout_height="@dimen/mediumImage"
            android:layout_marginStart="@dimen/extraSpace"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/mediumImage"
            android:layout_height="@dimen/mediumImage"
            android:layout_marginStart="@dimen/extraSpace"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/twitter" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extraSpace"
            android:layout_marginTop="@dimen/extraLargeSpace"
            android:layout_marginEnd="@dimen/extraSpace"
            android:hint="@string/gmail_text"
            app:layout_constraintEnd_toEndOf="@id/subConstrain"
            app:layout_constraintStart_toStartOf="@id/subConstrain"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extraSpace"
            android:layout_marginTop="@dimen/extraSpace"
            android:layout_marginEnd="@dimen/extraSpace"
            android:hint="@string/password_text"
            app:layout_constraintEnd_toEndOf="@id/subConstrain"
            app:layout_constraintStart_toStartOf="@id/subConstrain"
            app:layout_constraintTop_toBottomOf="@+id/mailInput"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extraLargeSpace"
            android:text="@string/reminder_me_next_time_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extraSpace"
            android:background="@drawable/background_button_login"
            android:text="@string/sign_in_text"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/reminderSwitch"
            app:layout_constraintStart_toStartOf="@+id/reminderSwitch"
            app:layout_constraintTop_toBottomOf="@id/reminderSwitch" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extraSpace"
            android:gravity="center"
            android:text="@string/don_t_have_account_sign_up_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/signUpButton"
            app:layout_constraintStart_toStartOf="@id/signUpButton"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>